# muxa

./: .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.ko.md  README.md  THIRD-PARTY-NOTICES.md  cliff.toml  index.html  package.json  pnpm-lock.yaml  vendor  vite.config.ts
docs/: ARCHITECTURE.md  DESIGN.md  SERVICE-REVIEW.md  SESSION-RESTORE.md  SETUP.md  STATUS.md
macos/: AppIcon.icns  GhosttyKit.xcframework  Package.resolved  Package.swift  build-ghostty-deps.sh
macos/.build/: build.db  plugin-tools.yaml  workspace-state.json
macos/Sources/muxa/: ActivityRail.swift  AgentActivity.swift  AgentProcessDetector.swift  AgentPrompt.swift  AgentResumeMode.swift  AgentRow.swift  AppInfo.swift  (+234 more)
macos/Sources/muxa-notify/: StatusLineSink.swift  main.swift
scripts/: app-identity.sh  bootstrap.sh  build-app.sh  build-dmg.sh  changelog.sh  dev-kill.sh  install-integration.sh  install.sh  integrate.sh  make-local-signing-cert.sh  new-worktree.sh  release-install.sh
scripts/build-appicon/: build.sh  icon-gen.swift
scripts/build-fileicons/: build.py
scripts/build-shiki/: README.md  code-entry.js
scripts/demo/: make-demo.sh
src/: App.tsx  ContentHeader.tsx  PaneHeader.tsx  SearchBar.tsx  Sidebar.tsx  SidebarControls.tsx  TerminalPane.tsx  TopBar.tsx  WorkspaceView.tsx  icons.ts  ime.test.ts  ime.ts  index.css  main.tsx  sidebarMode.ts  store.ts  tree.ts  workspace.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs  sys.rs
(+335 files in other folders)
